src/app/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';
@import 'shadcn/tailwind.css';
@plugin "@tailwindcss/typography";

@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);
}

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
  --editor-selection-bg: oklch(0 0 0 / 0.2);
}

.dark {
  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
  --editor-selection-bg: oklch(1 0 0 / 0.2);
}

* {
  scrollbar-width: thin;
  scrollbar-color: var(--muted-foreground) var(--background);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

/* Tiptap text editor stylings */
.tiptap-text-editor.tiptap-text-editor {
  --code-bg-clr: oklch(96.2% 0 0);
  --code-border-clr: oklch(90.2% 0 0);
  --pre-code-clr: oklch(10% 0 0);
  --line-through-clr: oklch(70% 0 0);
  --task-list-accent-clr: oklch(0 0 0);
  --list-marker-clr: oklch(40% 0 0);
}
.dark {
  .tiptap-text-editor.tiptap-text-editor {
    --code-bg-clr: oklch(22% 0 0);
    --code-border-clr: oklch(28% 0 0);
    --pre-code-clr: oklch(92% 0 0);
    --line-through-clr: oklch(55% 0 0);
    --task-list-accent-clr: oklch(95% 0 0);
    --list-marker-clr: oklch(70% 0 0);
  }
}

.tiptap-text-editor.tiptap-text-editor {
  p {
    margin-block: 0.5rem;
    color: var(--primary);
  }

  h2 {
    font-size: 1.8rem;
    font-weight: 700;
    line-height: 1.3;
    margin-block: 1rem 0.5rem;
  }
  h3 {
    font-size: 1.5rem;
    font-weight: 650;
    line-height: 1.35;
    margin-block: 0.9rem 0.45rem;
  }
  h4 {
    font-size: 1.25rem;
    font-weight: 600;
    line-height: 1.4;
    margin-block: 0.8rem 0.4rem;
  }
  h5 {
    font-size: 1.1rem;
    font-weight: 600;
    line-height: 1.45;
    margin-block: 0.7rem 0.35rem;
  }

  *::selection {
    background-color: var(--editor-selection-bg);
  }

  code::before,
  code::after {
    content: '';
  }

  code:not(pre *) {
    font-weight: normal;
    font-size: 0.825rem;
    border: 1px solid var(--code-border-clr);
    background-color: var(--code-bg-clr);
    border-radius: 0.355rem;
    padding-inline: 0.3rem;
    padding-block: 0.175rem 0.1rem;
    vertical-align: middle;
  }

  pre {
    padding-inline: 1rem;
    padding-block: 1rem;
    border: 1px solid var(--code-border-clr);
    background-color: var(--code-bg-clr);
    border-radius: 0.555rem;

    code {
      color: var(--pre-code-clr);
    }
  }

  ol,
  ul {
    li,
    p {
      margin: 0;
    }
    li::marker {
      color: var(--muted-foreground);
    }
    li * {
      color: inherit;
    }
  }

  ul[data-type='taskList'] {
    padding: 0;
    padding-inline-start: 0.225rem;

    li {
      display: flex;
    }
    li > div {
      flex: 1;
    }
    li div p {
      padding-inline-start: 0.5rem;
      margin: 0;
    }
    li[data-checked='true'] {
      div {
        text-decoration: line-through;
      }
    }
    input[type='checkbox'] {
      accent-color: var(--task-list-accent-clr);
      cursor: pointer;
      flex-shrink: 0;
    }
  }
}
div:has(.tiptap-bubble-menu-inner-element) {
  transition:
    left 150ms ease-out,
    top 150ms ease-out;
  will-change: left, top;
}

@media (pointer: fine) {
  button {
    cursor: pointer;
  }
}

